[package]
name = "xrpl-rust"
version = "0.2.0"
edition = "2018"
authors = ["Tanveer Wahid <tan@wahid.email>"]
description = "A 100% Rust library to interact with the XRPL"
readme = "README.md"
license = "ISC"
repository = "https://github.com/589labs/xrpl-rust"

keywords = ["xrpl", "no_std"]
categories = ["no-std"]

[package.metadata.release]
no-dev-version = true
tag-name = "{{version}}"

[lib]
name = "xrpl"
crate-type = ["lib"]
proc-macro = true

[dependencies]
lazy_static = "1.4.0"
sha2 = { version = "0.10.2", default-features = false }
rand_hc = "0.3.1"
ripemd = "0.1.1"
ed25519-dalek = { version = "2.1.1", default-features = false, features = [
    "alloc",
    "zeroize",
] }
secp256k1 = { version = "0.29.0", default-features = false, features = [
    "alloc",
] }
bs58 = { version = "0.5.0", default-features = false, features = [
    "check",
    "alloc",
] }
indexmap = { version = "2.0.0", features = ["serde"] }
regex = { version = "1.5.4", default-features = false }
strum = { version = "0.26.3", default-features = false }
strum_macros = { version = "0.26.4", default-features = false }
crypto-bigint = { version = "0.5.1" }
rust_decimal = { version = "1.17.0", default-features = false, features = [
    "serde",
] }
chrono = { version = "0.4.19", default-features = false, features = [
    "alloc",
    "clock",
] }
hex = { version = "0.4.3", default-features = false, features = ["alloc"] }
rand = { version = "0.8.5", default-features = false, features = ["getrandom"] }
serde = { version = "1.0.130", default-features = false, features = ["derive"] }
serde_json = { version = "1.0.68", default-features = false, features = [
    "alloc",
] }
serde_with = "3.2.0"
serde_repr = "0.1"
zeroize = "1.5.7"
hashbrown = { version = "0.14.5", features = ["serde"] }
fnv = { version = "1.0.7", default-features = false }
derive-new = { version = "0.6.0", default-features = false }
thiserror-no-std = "2.0.2"
anyhow = { version = "1.0.69", default-features = false }

# networking
url = { version = "2.2.1", default-features = false, optional = true }
# websocket
embassy-sync = { version = "0.6.0", optional = true }
embedded-io-async = { version = "0.6.1", optional = true }
embedded-websocket = { version = "0.9.3", default-features = false, optional = true }
futures = { version = "0.3.30", optional = true }
# websocket-codec
bytes = { version = "1.7.1", default-features = false, optional = true }
tokio-util = { version = "0.7.11", features = ["codec"], optional = true }
# websocket-std
embassy-futures = { version = "0.1.1", optional = true }
tokio = { version = "1.0", default-features = false, features = [
    "net",
], optional = true }
tokio-tungstenite = { version = "0.23.1", optional = true }
embedded-nal-async = { version = "0.7.1", optional = true }
# json-rpc
reqwless = { version = "0.12.1", optional = true }
# json-rpc-std
reqwest = { version = "0.12.5", features = ["json"], optional = true }

[dev-dependencies]
criterion = "0.5.1"
tokio = { version = "1.0", features = ["full"] }

[[bench]]
name = "benchmarks"
harness = false

[features]
default = ["std", "utils", "wallet", "models", "websocket"]
models = ["transactions", "ledger", "requests", "results"]
transactions = ["amounts", "currencies"]
requests = ["amounts", "currencies"]
results = ["amounts", "currencies"]
ledger = ["amounts", "currencies"]
amounts = []
currencies = []
json-rpc = ["requests", "results", "url"]
json-rpc-std = ["requests", "results", "url"]
websocket = [
    "requests",
    "results",
    "url",
    "embassy-sync",
    "embedded-io-async",
    "embedded-websocket",
    "futures",
]
websocket-codec = ["requests", "results", "bytes", "tokio-util"]
websocket-std = [
    "requests",
    "results",
    "url",
    "embassy-sync",
    "futures",
    "embassy-futures",
    "tokio",
    "tokio-tungstenite",
]
core = ["utils"]
wallet = ["core"]
utils = []
std = [
    "rand/std",
    "regex/std",
    "chrono/std",
    "rand/std_rng",
    "hex/std",
    "rust_decimal/std",
    "bs58/std",
    "serde/std",
    "indexmap/std",
    "secp256k1/std",
]
