[package]
name = "xrpl-rust"
version = "0.2.0"
edition = "2018"
authors = ["Tanveer Wahid <tan@wahid.email>"]
description = "A 100% Rust library to interact with the XRPL"
readme = "README.md"
license = "ISC"
repository = "https://github.com/589labs/xrpl-rust"

keywords = ["xrpl", "no_std"]
categories = ["no-std"]

[package.metadata.release]
no-dev-version = true
tag-name = "{{version}}"

[lib]
name = "xrpl"
crate-type = ["lib"]
proc-macro = true

[dependencies]
lazy_static = "1.4.0"
sha2 = "0.10.2"
rand_hc = "0.3.1"
ripemd = "0.1.1"
ed25519-dalek = "1.0.1"
secp256k1 = { version = "0.27.0", default-features = false, features = [
    "alloc",
] }
bs58 = { version = "0.5.0", default-features = false, features = [
    "check",
    "alloc",
] }
indexmap = { version = "2.0.0", features = ["serde"] }
regex = { version = "1.5.4", default-features = false }
strum = { version = "0.25.0", default-features = false }
strum_macros = { version = "0.25.2", default-features = false }
crypto-bigint = { version = "0.5.1" }
rust_decimal = { version = "1.17.0", default-features = false, features = [
    "serde",
] }
chrono = { version = "0.4.19", default-features = false, features = [
    "alloc",
    "clock",
] }
hex = { version = "0.4.3", default-features = false, features = ["alloc"] }
rand = { version = "0.8.5", default-features = false, features = ["getrandom"] }
serde = { version = "1.0.130", default-features = false, features = ["derive"] }
serde_json = { version = "1.0.68", default-features = false, features = [
    "alloc",
] }
serde_with = "3.2.0"
serde_repr = "0.1"
zeroize = "1.5.7"
hashbrown = { version = "0.14.5", features = ["serde"] }
fnv = { version = "1.0.7", default-features = false }
derive-new = { version = "0.5.9", default-features = false }
thiserror-no-std = "2.0.2"
anyhow = { version = "1.0.69", default-features = false }

# networking
url = { version = "2.2.2", default-features = false, optional = true }
futures = { version = "0.3.30", default-features = false, features = [
    "alloc",
], optional = true }
embassy-sync = { version = "0.6.0", default-features = false }
rand_core = { version = "0.6.4", default-features = false }
# std websocket
embassy-futures = { version = "0.1.1", optional = true }
tokio-tungstenite = { version = "0.23.1", features = [
    "native-tls",
], optional = true }
tungstenite = { version = "0.23.0", optional = true }
tokio-util = { version = "0.7.11", features = ["codec"], optional = true }
tokio = { version = "1.0", features = ["full"], optional = true }
# no-std websocket
bytes = { version = "1.4.0", default-features = false, optional = true }
embedded-io-async = { version = "0.6.1", optional = true }
embedded-websocket = { version = "0.9.3", optional = true }
# std json-rpc
reqwest = { version = "0.12.5", features = ["json"], optional = true }
# no-std json-rpc
reqwless = { version = "0.12.0", optional = true }
embedded-nal-async = { version = "0.7.1", optional = true }

[dev-dependencies]
criterion = "0.5.1"
tokio = { version = "1.0", features = ["full"] }
tokio-util = { version = "0.7.11", features = ["codec"] }

[[bench]]
name = "benchmarks"
harness = false

[features]
default = ["std", "core", "models", "utils", "helpers", "websocket-std"]
models = ["core", "transactions", "requests", "ledger", "results"]
transactions = ["core", "amounts", "currencies"]
requests = ["core", "amounts", "currencies"]
results = ["core", "amounts", "currencies"]
ledger = ["core", "amounts", "currencies"]
helpers = ["account-helpers", "ledger-helpers", "transaction-helpers"]
account-helpers = ["amounts", "currencies", "requests", "results"]
ledger-helpers = ["amounts", "currencies", "requests", "results"]
transaction-helpers = [
    "amounts",
    "currencies",
    "requests",
    "results",
    "transactions",
    "ledger",
]
amounts = ["core"]
currencies = ["core"]
json-rpc = ["url", "reqwless", "embedded-nal-async"]
json-rpc-std = ["url", "reqwest"]
websocket = ["url", "futures", "embedded-websocket", "embedded-io-async"]
websocket-codec = ["bytes", "tokio-util"]
websocket-std = [
    "url",
    "futures",
    "tungstenite",
    "tokio",
    "tokio-tungstenite",
    "embassy-futures",
]
core = ["utils"]
utils = []
std = [
    "embedded-websocket/std",
    "futures/std",
    "rand/std",
    "regex/std",
    "chrono/std",
    "rand/std_rng",
    "hex/std",
    "rust_decimal/std",
    "bs58/std",
    "serde/std",
    "indexmap/std",
    "secp256k1/std",
]
