[package]
name = "xrpl-rust"
version = "0.3.0"
edition = "2021"
authors = [
    "Tanveer Wahid <tan@wahid.email>",
    "Steffen Konermann <contact@limpidcrypto.com>",
]
description = "A 100% Rust library to interact with the XRPL"
readme = "README.md"
license = "ISC"
repository = "https://github.com/sephynox/xrpl-rust"

keywords = ["xrpl", "no_std"]
categories = ["no-std"]

[package.metadata.release]
no-dev-version = true
tag-name = "{{version}}"

[lib]
name = "xrpl"
crate-type = ["lib"]

[dependencies]
lazy_static = "1.4.0"
sha2 = { version = "0.10.2", default-features = false }
rand_hc = "0.3.1"
ripemd = "0.1.1"
ed25519-dalek = { version = "2.1.1", default-features = false, features = [
    "alloc",
    "zeroize",
] }
secp256k1 = { version = "0.29.0", default-features = false, features = [
    "alloc",
] }
bs58 = { version = "0.5.0", default-features = false, features = [
    "check",
    "alloc",
] }
indexmap = { version = "2.0.0", features = ["serde"] }
regex = { version = "1.5.4", default-features = false }
strum = { version = "0.26.3", default-features = false }
strum_macros = { version = "0.26.4", default-features = false }
crypto-bigint = { version = "0.5.1" }
rust_decimal = { version = "1.17.0", default-features = false, features = [
    "serde",
] }
chrono = { version = "0.4.19", default-features = false, features = [
    "alloc",
    "clock",
] }
hex = { version = "0.4.3", default-features = false, features = ["alloc"] }
rand = { version = "0.8.5", default-features = false, features = ["getrandom"] }
serde = { version = "1.0.130", default-features = false, features = ["derive"] }
serde_json = { version = "1.0.68", default-features = false, features = [
    "alloc",
] }
serde_with = "3.2.0"
serde_repr = "0.1"
zeroize = "1.5.7"
hashbrown = { version = "0.14.5", features = ["serde"] }
fnv = { version = "1.0.7", default-features = false }
derive-new = { version = "0.7.0", default-features = false }
thiserror-no-std = "2.0.2"
anyhow = { version = "1.0.69", default-features = false }
embassy-sync = "0.6.0"

# networking
url = { version = "2.2.2", default-features = false }
embedded-io-async = { version = "0.6.1", optional = true }
futures = { version = "0.3.30", optional = true }
tokio = { version = "1.0", optional = true, features = ["rt-multi-thread"] }
embassy-time = { version = "0.3.2", optional = true }
embedded-websocket = { git = "https://github.com/LimpidCrypto/embedded-websocket", version = "0.9.3", branch = "embedded-io-async", optional = true, default-features = false, features = [
    "embedded-io-async",
] }
reqwless = { version = "0.12.1", optional = true }
reqwest = { version = "0.12.7", optional = true, features = ["json"] }
tokio-tungstenite = { version = "0.23.1", optional = true, features = [
    "native-tls",
] }
embassy-futures = { version = "0.1.1" }
embedded-nal-async = { version = "0.7.1", optional = true }
actix-rt = { version = "2.10.0", optional = true }
async-std = { version = "1.13.0", optional = true }
futures-executor = { version = "0.3.30", optional = true }
futures-timer = { version = "3.0.3", optional = true }
smol = { version = "2.0.2", optional = true }

[dev-dependencies]
criterion = "0.5.1"
tokio = { version = "1.0", features = ["full"] }
embedded-io-adapters = { version = "0.6.1", features = ["tokio-1"] }

[[bench]]
name = "benchmarks"
harness = false

[features]
default = [
    "std",
    "tokio-rt",
    "core",
    "wallet",
    "models",
    "utils",
    "helpers",
    "websocket",
    "json-rpc",
]
models = [
    "transaction-models",
    "request-models",
    "ledger-models",
    "result-models",
]
transaction-models = ["core"]
request-models = []
result-models = ["request-models", "ledger-models"]
ledger-models = []
helpers = [
    "account-helpers",
    "ledger-helpers",
    "transaction-helpers",
    "wallet-helpers",
]
account-helpers = ["core", "request-models", "result-models"]
ledger-helpers = ["request-models", "result-models"]
wallet-helpers = ["wallet", "request-models", "result-models"]
transaction-helpers = [
    "wallet",
    "account-helpers",
    "ledger-helpers",
    "request-models",
    "result-models",
    "transaction-models",
    "ledger-models",
]
wallet = ["core"]
json-rpc = ["request-models", "result-models", "reqwless", "embedded-nal-async"]
websocket = [
    "request-models",
    "result-models",
    "futures",
    "embedded-io-async",
    "embedded-websocket",
]
core = ["utils"]
utils = []
std = [
    "rand/std",
    "regex/std",
    "chrono/std",
    "rand/std_rng",
    "hex/std",
    "rust_decimal/std",
    "bs58/std",
    "serde/std",
    "indexmap/std",
    "secp256k1/std",
    "embedded-websocket/std",
    "reqwest",
    "tokio",
    "tokio-tungstenite",
    "futures/std",
]
# runtimes
tokio-rt = ["tokio"]
embassy-rt = ["dep:embassy-time"]
actix-rt = ["dep:actix-rt"]
async-std-rt = ["dep:async-std"]
futures-rt = ["dep:futures-timer"]
smol-rt = ["dep:smol"]
