[package]
name = "std"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
xrpl-rust = { path = "../.." }
tokio = { version = "1.0", features = ["full"] }
rand = "0.8.5"
tokio-util = { version = "0.7.11", features = ["codec"] }

[[bin]]
name = "wallet_from_seed"
path = "src/bin/wallet/wallet_from_seed.rs"
required-features = []

[[bin]]
name = "generate_wallet"
path = "src/bin/wallet/generate_wallet.rs"
required-features = []

[[bin]]
name = "tungstenite"
path = "src/bin/tokio/net/tungstenite.rs"
required-features = ["tokio"]

[[bin]]
name = "websocket"
path = "src/bin/tokio/net/websocket.rs"

[[bin]]
name = "sign_request"
path = "src/bin/transaction/sign_transaction.rs"
required-features = []
